# stock_index

./: .env.example  .gitignore  Makefile  README.md  plan.md  pyproject.toml  stockindex.service
.streamlit/: config.toml
config/: groups.yaml  indicators.yaml  settings.yaml  thresholds.yaml
nginx/: stockindex.conf
scripts/: patch_nginx.py  run_daily.py
src/stockindex/config/: loader.py  schema.py
src/stockindex/core/: alerts.py  collector.py  deadcat.py  registry.py  trend.py  uptrend.py
src/stockindex/dashboard/: app.py
src/stockindex/dashboard/components/: charts.py  deadcat_view.py  uptrend_view.py
src/stockindex/notify/: mailer.py
src/stockindex/notify/templates/: alert.html.j2
src/stockindex/providers/: __init__.py  base.py  coingecko_provider.py  ecos_provider.py  fred_provider.py  krx_provider.py  portfolio_provider.py  yfinance_provider.py
src/stockindex/storage/: db.py  timeseries.py
tests/: test_core.py  test_deadcat.py
